# pubgrub-test

./: .gitignore  .gitmodules  ACHIEVEMENT_SUMMARY.md  BENCHMARKS.md  DEVELOPMENT_NOTES.md  LICENSE  PROJECT_SUMMARY.md  README.md  TODO.md  debug_resolver.py  debug_scenario2.py  debug_simple.py  main.py  pyproject.toml  test_conflicts.py
benchmarks/: bench_backtracking.py  bench_pubgrub.py  bench_sudoku.py  bench_term.py  bench_version.py  test_bench_pytest.py
comparison/: README.md
comparison/outputs/: comparison_results.json
comparison/reports/: comparison_report.csv  comparison_report.html
comparison/scripts/: compare_implementations.py  generate_report.py  run_all_tests.sh  run_python.py  run_rust.sh
comparison/test_data/: basic_scenario.json  conflict_scenario.json  performance_scenario.json
examples/: conflict_example.json  pubgrub_rs_scenario2.json  simple_example.json
pubgrub_resolver/: __init__.py  cli.py  conflict_resolver.py  dependency_provider.py  incompatibility.py  package.py  partial_solution.py  resolver.py  term.py  version.py
scripts/: pubgrub-cli
tests/: test_conflict_resolution.py  test_property_based.py  test_property_based_new.py  test_pubgrub_examples.py  test_stress.py  test_term.py  test_term_intersection_advanced.py  test_unit_propagation_performance.py  test_version.py  test_version_set_complement.py
