[project]
name = "pubgrub-resolver"
version = "0.1.0"
description = "A Python implementation of the PubGrub version resolution algorithm"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typing-extensions>=4.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
pubgrub = "pubgrub_resolver.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.2",
    "hypothesis>=6.0.0",
    "pytest-benchmark>=5.1.0",
]
bench = [
    "pytest-benchmark>=4.0.0",
]
